--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Sorting Algorithm Visualizer</title>
 	</head>
 	<body>
-		<!-- <nav>
+		<nav>
 			<div class="theme-switch-wrapper">
 				<label class="theme-switch" for="checkbox">
 					<input type="checkbox" id="checkbox" />
@@ -17,7 +17,7 @@
 				</label>
 				<em>Enable Dark Mode!</em>
 			</div>
-		</nav> -->
+		</nav>
 		<div class="container">
 			<h1>Sorting Algorithm Visualizer</h1>
 			<div id="array-generator"></div>
